versions/0.8.1/_sources/refs/_aws-cdk_aws-dms.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"J+ohdQ5NcRQv2mVA/QAZKYcnAcOsT+qrZu7aCiQoGws="}

@aws-cdk/aws-dms
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/dms/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:dms:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="dms" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>dms</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:dms:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='dms', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dms/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dms@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dms": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dms@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dms/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dms@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dms": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dms@0.8.1



.. mdinclude:: ./__aws-cdk_aws-dms.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-dms

EndpointExternalId
^^^^^^^^^^^^^^^^^^

.. py:class:: EndpointExternalId([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.EndpointExternalId;

      .. code-tab:: javascript

         const { EndpointExternalId } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { EndpointExternalId } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationInstancePrivateIpAddresses
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationInstancePrivateIpAddresses([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.ReplicationInstancePrivateIpAddresses;

      .. code-tab:: javascript

         const { ReplicationInstancePrivateIpAddresses } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { ReplicationInstancePrivateIpAddresses } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationInstancePublicIpAddresses
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationInstancePublicIpAddresses([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.ReplicationInstancePublicIpAddresses;

      .. code-tab:: javascript

         const { ReplicationInstancePublicIpAddresses } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { ReplicationInstancePublicIpAddresses } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-dms.cloudformation

CertificateResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: CertificateResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.CertificateResource;

      .. code-tab:: javascript

         const { cloudformation.CertificateResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.CertificateResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CertificateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CertificateResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.CertificateResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


CertificateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CertificateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.CertificateResourceProps;

      .. code-tab:: javascript

         // cloudformation.CertificateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CertificateResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: certificateIdentifier

      ``AWS::DMS::Certificate.CertificateIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-certificate.html#cfn-dms-certificate-certificateidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: certificatePem

      ``AWS::DMS::Certificate.CertificatePem``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-certificate.html#cfn-dms-certificate-certificatepem


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: certificateWallet

      ``AWS::DMS::Certificate.CertificateWallet``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-certificate.html#cfn-dms-certificate-certificatewallet


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


EndpointResource
~~~~~~~~~~~~~~~~

.. py:class:: EndpointResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.EndpointResource;

      .. code-tab:: javascript

         const { cloudformation.EndpointResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.EndpointResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``EndpointResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``EndpointResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.EndpointResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: endpointExternalId

      :type: :py:class:`~@aws-cdk/aws-dms.EndpointExternalId` *(readonly)*

   .. py:class:: DynamoDbSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.dms.cloudformation.EndpointResource.DynamoDbSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.EndpointResource.DynamoDbSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EndpointResource.DynamoDbSettingsProperty } from '@aws-cdk/aws-dms';





      .. py:attribute:: serviceAccessRoleArn

         ``EndpointResource.DynamoDbSettingsProperty.ServiceAccessRoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-dynamodbsettings.html#cfn-dms-endpoint-dynamodbsettings-serviceaccessrolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MongoDbSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.dms.cloudformation.EndpointResource.MongoDbSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.EndpointResource.MongoDbSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EndpointResource.MongoDbSettingsProperty } from '@aws-cdk/aws-dms';





      .. py:attribute:: authMechanism

         ``EndpointResource.MongoDbSettingsProperty.AuthMechanism``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-authmechanism


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: authSource

         ``EndpointResource.MongoDbSettingsProperty.AuthSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-authsource


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: authType

         ``EndpointResource.MongoDbSettingsProperty.AuthType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-authtype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: databaseName

         ``EndpointResource.MongoDbSettingsProperty.DatabaseName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-databasename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: docsToInvestigate

         ``EndpointResource.MongoDbSettingsProperty.DocsToInvestigate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-docstoinvestigate


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: extractDocId

         ``EndpointResource.MongoDbSettingsProperty.ExtractDocId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-extractdocid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: nestingLevel

         ``EndpointResource.MongoDbSettingsProperty.NestingLevel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-nestinglevel


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: password

         ``EndpointResource.MongoDbSettingsProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-password


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: port

         ``EndpointResource.MongoDbSettingsProperty.Port``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-port


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serverName

         ``EndpointResource.MongoDbSettingsProperty.ServerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-servername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: username

         ``EndpointResource.MongoDbSettingsProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-mongodbsettings.html#cfn-dms-endpoint-mongodbsettings-username


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: S3SettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.dms.cloudformation.EndpointResource.S3SettingsProperty;

         .. code-tab:: javascript

            // cloudformation.EndpointResource.S3SettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EndpointResource.S3SettingsProperty } from '@aws-cdk/aws-dms';





      .. py:attribute:: bucketFolder

         ``EndpointResource.S3SettingsProperty.BucketFolder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-bucketfolder


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: bucketName

         ``EndpointResource.S3SettingsProperty.BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: compressionType

         ``EndpointResource.S3SettingsProperty.CompressionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-compressiontype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: csvDelimiter

         ``EndpointResource.S3SettingsProperty.CsvDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-csvdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: csvRowDelimiter

         ``EndpointResource.S3SettingsProperty.CsvRowDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-csvrowdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: externalTableDefinition

         ``EndpointResource.S3SettingsProperty.ExternalTableDefinition``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-externaltabledefinition


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serviceAccessRoleArn

         ``EndpointResource.S3SettingsProperty.ServiceAccessRoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dms-endpoint-s3settings.html#cfn-dms-endpoint-s3settings-serviceaccessrolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



EndpointResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EndpointResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.EndpointResourceProps;

      .. code-tab:: javascript

         // cloudformation.EndpointResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.EndpointResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: endpointType

      ``AWS::DMS::Endpoint.EndpointType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-endpointtype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: engineName

      ``AWS::DMS::Endpoint.EngineName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-enginename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: certificateArn

      ``AWS::DMS::Endpoint.CertificateArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-certificatearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: databaseName

      ``AWS::DMS::Endpoint.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-databasename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: dynamoDbSettings

      ``AWS::DMS::Endpoint.DynamoDbSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-dynamodbsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-dms.cloudformation.EndpointResource.DynamoDbSettingsProperty` or undefined


   .. py:attribute:: endpointIdentifier

      ``AWS::DMS::Endpoint.EndpointIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-endpointidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: extraConnectionAttributes

      ``AWS::DMS::Endpoint.ExtraConnectionAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-extraconnectionattributes


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: kmsKeyId

      ``AWS::DMS::Endpoint.KmsKeyId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-kmskeyid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: mongoDbSettings

      ``AWS::DMS::Endpoint.MongoDbSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-mongodbsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-dms.cloudformation.EndpointResource.MongoDbSettingsProperty` or undefined


   .. py:attribute:: password

      ``AWS::DMS::Endpoint.Password``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-password


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: port

      ``AWS::DMS::Endpoint.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-port


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: s3Settings

      ``AWS::DMS::Endpoint.S3Settings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-s3settings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-dms.cloudformation.EndpointResource.S3SettingsProperty` or undefined


   .. py:attribute:: serverName

      ``AWS::DMS::Endpoint.ServerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-servername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sslMode

      ``AWS::DMS::Endpoint.SslMode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-sslmode


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::DMS::Endpoint.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: username

      ``AWS::DMS::Endpoint.Username``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-endpoint.html#cfn-dms-endpoint-username


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


EventSubscriptionResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EventSubscriptionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.EventSubscriptionResource;

      .. code-tab:: javascript

         const { cloudformation.EventSubscriptionResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.EventSubscriptionResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``EventSubscriptionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``EventSubscriptionResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.EventSubscriptionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


EventSubscriptionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EventSubscriptionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.EventSubscriptionResourceProps;

      .. code-tab:: javascript

         // cloudformation.EventSubscriptionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.EventSubscriptionResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: snsTopicArn

      ``AWS::DMS::EventSubscription.SnsTopicArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-snstopicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: enabled

      ``AWS::DMS::EventSubscription.Enabled``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-enabled


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: eventCategories

      ``AWS::DMS::EventSubscription.EventCategories``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-eventcategories


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sourceIds

      ``AWS::DMS::EventSubscription.SourceIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-sourceids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sourceType

      ``AWS::DMS::EventSubscription.SourceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-sourcetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subscriptionName

      ``AWS::DMS::EventSubscription.SubscriptionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-subscriptionname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::DMS::EventSubscription.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-eventsubscription.html#cfn-dms-eventsubscription-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


ReplicationInstanceResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationInstanceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationInstanceResource;

      .. code-tab:: javascript

         const { cloudformation.ReplicationInstanceResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.ReplicationInstanceResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReplicationInstanceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReplicationInstanceResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.ReplicationInstanceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: replicationInstancePrivateIpAddresses

      :type: :py:class:`~@aws-cdk/aws-dms.ReplicationInstancePrivateIpAddresses` *(readonly)*


   .. py:attribute:: replicationInstancePublicIpAddresses

      :type: :py:class:`~@aws-cdk/aws-dms.ReplicationInstancePublicIpAddresses` *(readonly)*


ReplicationInstanceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationInstanceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationInstanceResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReplicationInstanceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReplicationInstanceResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: replicationInstanceClass

      ``AWS::DMS::ReplicationInstance.ReplicationInstanceClass``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-replicationinstanceclass


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allocatedStorage

      ``AWS::DMS::ReplicationInstance.AllocatedStorage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-allocatedstorage


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: allowMajorVersionUpgrade

      ``AWS::DMS::ReplicationInstance.AllowMajorVersionUpgrade``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-allowmajorversionupgrade


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: autoMinorVersionUpgrade

      ``AWS::DMS::ReplicationInstance.AutoMinorVersionUpgrade``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-autominorversionupgrade


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: availabilityZone

      ``AWS::DMS::ReplicationInstance.AvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-availabilityzone


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: engineVersion

      ``AWS::DMS::ReplicationInstance.EngineVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-engineversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: kmsKeyId

      ``AWS::DMS::ReplicationInstance.KmsKeyId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-kmskeyid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: multiAz

      ``AWS::DMS::ReplicationInstance.MultiAZ``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-multiaz


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredMaintenanceWindow

      ``AWS::DMS::ReplicationInstance.PreferredMaintenanceWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-preferredmaintenancewindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: publiclyAccessible

      ``AWS::DMS::ReplicationInstance.PubliclyAccessible``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-publiclyaccessible


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicationInstanceIdentifier

      ``AWS::DMS::ReplicationInstance.ReplicationInstanceIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-replicationinstanceidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicationSubnetGroupIdentifier

      ``AWS::DMS::ReplicationInstance.ReplicationSubnetGroupIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-replicationsubnetgroupidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::DMS::ReplicationInstance.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: vpcSecurityGroupIds

      ``AWS::DMS::ReplicationInstance.VpcSecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationinstance.html#cfn-dms-replicationinstance-vpcsecuritygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


ReplicationSubnetGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationSubnetGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationSubnetGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ReplicationSubnetGroupResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.ReplicationSubnetGroupResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReplicationSubnetGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReplicationSubnetGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.ReplicationSubnetGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ReplicationSubnetGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationSubnetGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationSubnetGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReplicationSubnetGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReplicationSubnetGroupResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: replicationSubnetGroupDescription

      ``AWS::DMS::ReplicationSubnetGroup.ReplicationSubnetGroupDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationsubnetgroup.html#cfn-dms-replicationsubnetgroup-replicationsubnetgroupdescription


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: subnetIds

      ``AWS::DMS::ReplicationSubnetGroup.SubnetIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationsubnetgroup.html#cfn-dms-replicationsubnetgroup-subnetids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: replicationSubnetGroupIdentifier

      ``AWS::DMS::ReplicationSubnetGroup.ReplicationSubnetGroupIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationsubnetgroup.html#cfn-dms-replicationsubnetgroup-replicationsubnetgroupidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::DMS::ReplicationSubnetGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationsubnetgroup.html#cfn-dms-replicationsubnetgroup-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


ReplicationTaskResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationTaskResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationTaskResource;

      .. code-tab:: javascript

         const { cloudformation.ReplicationTaskResource } = require('@aws-cdk/aws-dms');

      .. code-tab:: typescript

         import { cloudformation.ReplicationTaskResource } from '@aws-cdk/aws-dms';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReplicationTaskResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReplicationTaskResource``
   :type properties: :py:class:`~@aws-cdk/aws-dms.cloudformation.ReplicationTaskResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ReplicationTaskResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationTaskResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.dms.cloudformation.ReplicationTaskResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReplicationTaskResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReplicationTaskResourceProps } from '@aws-cdk/aws-dms';





   .. py:attribute:: migrationType

      ``AWS::DMS::ReplicationTask.MigrationType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-migrationtype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: replicationInstanceArn

      ``AWS::DMS::ReplicationTask.ReplicationInstanceArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-replicationinstancearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sourceEndpointArn

      ``AWS::DMS::ReplicationTask.SourceEndpointArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-sourceendpointarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tableMappings

      ``AWS::DMS::ReplicationTask.TableMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-tablemappings


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: targetEndpointArn

      ``AWS::DMS::ReplicationTask.TargetEndpointArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-targetendpointarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cdcStartTime

      ``AWS::DMS::ReplicationTask.CdcStartTime``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-cdcstarttime


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicationTaskIdentifier

      ``AWS::DMS::ReplicationTask.ReplicationTaskIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-replicationtaskidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicationTaskSettings

      ``AWS::DMS::ReplicationTask.ReplicationTaskSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-replicationtasksettings


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::DMS::ReplicationTask.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dms-replicationtask.html#cfn-dms-replicationtask-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined



.. py:currentmodule:: @aws-cdk/aws-dms

